--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>Объектов природного наследия ЮНЕСКО 12</li>
             <li>Объектов культурного наследия ЮНЕСКО 16</li>
             <li>Природных заповедников 105</li>
-            <li>Аэропортов 241<li>
+            <li>Аэропортов 241</li>
           </ul>
         </section>
         <section class="photo-grid">
