--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <article class="place">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
-              <p class="place__website_url-heading">URL</p>
-              <a href="http://park-kosa.ru" class="place__website_link" target="_blank" rel="noopener">park-kosa.ru</a>
+              <p class="place__url-heading">URL</p>
+              <a href="http://park-kosa.ru" class="place__link" target="_blank" rel="noopener">park-kosa.ru</a>
             </div>
             <img src="./images/place-kosa.jpg" alt="Берег моря" class="place__image">
             <div class="place__container">
@@ -67,8 +67,8 @@
           <article class="place">
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
-              <p class="place__website_url-heading">URL</p>
-              <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website_link" target="_blank" rel="noopener">National Geographic</a>
+              <p class="place__url-heading">URL</p>
+              <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link" target="_blank" rel="noopener">National Geographic</a>
             </div>
             <img src="./images/place-kolsky.jpg" alt="Заснеженые горы" class="place__image">
             <div class="place__container">
@@ -81,8 +81,8 @@
           <article class="place">
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
-              <p class="place__website_url-heading">URL</p>
-              <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website_link" target="_blank" rel="noopener">Facebook</a>
+              <p class="place__url-heading">URL</p>
+              <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link" target="_blank" rel="noopener">Facebook</a>
             </div>
             <img src="./images/place-altai.jpg" alt="Ноутбук на фоне леса" class="place__image">
             <div class="place__container">
@@ -95,8 +95,8 @@
           <article class="place">
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
-              <p class="place__website_url-heading">URL</p>
-              <a href="https://vk.com/baikalmile" class="place__website_link" target="_blank" rel="noopener">https://vk.com/baikalmile</a>
+              <p class="place__url-heading">URL</p>
+              <a href="https://vk.com/baikalmile" class="place__link" target="_blank" rel="noopener">https://vk.com/baikalmile</a>
             </div>
             <img src="./images/place-winter-baikal.jpg" alt="Лед Байкала" class="place__image">
             <div class="place__container">
@@ -109,8 +109,8 @@
           <article class="place">
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
-              <p class="place__website_url-heading">URL</p>
-              <a href="http://vodlozero.ru" class="place__website_link" target="_blank" rel="noopener">http://vodlozero.ru/</a>
+              <p class="place__url-heading">URL</p>
+              <a href="http://vodlozero.ru" class="place__link" target="_blank" rel="noopener">http://vodlozero.ru/</a>
             </div>
             <img src="./images/place-karelia.jpg" alt="Речка" class="place__image">
             <div class="place__container">
