--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <body>
     <div class="page">
       <header class="header">
-      <a href="#" class="header__logo" target="_blank" rel="noopener"></a>
-        <nav class="link-container">
-          <button class="header__lang-link">Ru</button>
-          <button class="header__lang-link">En</button>
-        </nav>
+      <img src="./images/header-logo.svg" alt="Лого" class="header__logo">
+        <div class="header__link-container">
+          <a href="#" class="header__lang-link header__lang-link_ru" target="_self">Ru</a>
+          <a href="#" class="header__lang-link" target="_self">En</a>
+        </div>
       </header>
       <main class="content">
         <section class="lead">
@@ -28,11 +28,11 @@
          <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.?</p>
           <ul class="intro__list">
-            <li>Часовых поясов 11</li>
-            <li>Объектов природного наследия ЮНЕСКО 12</li>
-            <li>Объектов культурного наследия ЮНЕСКО 16</li>
-            <li>Природных заповедников 105</li>
-            <li>Аэропортов 241</li>
+            <li>Часовых поясов <span class="intro__span-accent">11</span></li>
+            <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
+            <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
+            <li>Природных заповедников <span class="intro__span-accent">105</span></li>
+            <li>Аэропортов <span class="intro__span-accent">241</span></li>
           </ul>
         </section>
         <section class="photo-grid">
@@ -120,19 +120,21 @@
           </article>
         </section>
         <section class="cover">
-            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__overlay">
+          <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__overlay">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
           </a>
         </section>
       </main>
       <footer class="footer">
-        <nav class="link-container">
-          <a href="https://yandex.ru/maps" target="_blank" class="footer__link" rel="noopener">Карты</a>
-          <a href="https://yandex.ru/pogoda" target="_blank" class="footer__link" rel="noopener">Погода</a>
-          <a href="https://rasp.yandex.ru" target="_blank" class="footer__link" rel="noopener">Расписание</a>
-          <a href="https://calendar.yandex.ru" target="_blank" class="footer__link" rel="noopener">Календарь</a>
-          <a href="https://travel.yandex.ru" target="_blank" class="footer__link" rel="noopener">Путешествия</a>
+        <nav class="footer__place-nav">
+          <ul class="footer__place-links">
+            <li class="footer__list_link"><a href="https://yandex.ru/maps" target="_blank" class="footer__link" rel="noopener">Карты</a></li>
+            <li class="footer__list_link"><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link" rel="noopener">Погода</a></li>
+            <li class="footer__list_link"><a href="https://rasp.yandex.ru" target="_blank" class="footer__link" rel="noopener">Расписание</a></li>
+            <li class="footer__list_link"><a href="https://calendar.yandex.ru" target="_blank" class="footer__link" rel="noopener">Календарь</a></li>
+            <li class="footer__list_link"><a href="https://travel.yandex.ru" target="_blank" class="footer__link" rel="noopener">Путешествия</a></li>
+          </ul>
         </nav>
         <p class="footer__copyright">&copy; 2021. Александр Переверзев</p>	
       </footer>
