--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
       <footer class="footer">
         <nav class="footer__place-nav">
           <ul class="footer__place-links">
-            <li class="footer__list_link"><a href="https://yandex.ru/maps" target="_blank" class="footer__link" rel="noopener">Карты</a></li>
-            <li class="footer__list_link"><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link" rel="noopener">Погода</a></li>
-            <li class="footer__list_link"><a href="https://rasp.yandex.ru" target="_blank" class="footer__link" rel="noopener">Расписание</a></li>
-            <li class="footer__list_link"><a href="https://calendar.yandex.ru" target="_blank" class="footer__link" rel="noopener">Календарь</a></li>
-            <li class="footer__list_link"><a href="https://travel.yandex.ru" target="_blank" class="footer__link" rel="noopener">Путешествия</a></li>
+            <li class="footer__list-link"><a href="https://yandex.ru/maps" target="_blank" class="footer__link" rel="noopener">Карты</a></li>
+            <li class="footer__list-link"><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link" rel="noopener">Погода</a></li>
+            <li class="footer__list-link"><a href="https://rasp.yandex.ru" target="_blank" class="footer__link" rel="noopener">Расписание</a></li>
+            <li class="footer__list-link"><a href="https://calendar.yandex.ru" target="_blank" class="footer__link" rel="noopener">Календарь</a></li>
+            <li class="footer__list-link"><a href="https://travel.yandex.ru" target="_blank" class="footer__link" rel="noopener">Путешествия</a></li>
           </ul>
         </nav>
         <p class="footer__copyright">&copy; 2021. Александр Переверзев</p>	
