--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header class="header">
       <img src="./images/header-logo.svg" alt="Лого" class="header__logo">
         <div class="header__link-container">
-          <a href="#" class="header__lang-link header__lang-link_ru" target="_self">Ru</a>
+          <a href="#" class="header__lang-link header__lang-link_active" target="_self">Ru</a>
           <a href="#" class="header__lang-link" target="_self">En</a>
         </div>
       </header>
